kustomize/overlays/hlg/route.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/server-snippet: server_tokens off;
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
  name: your-application-name-here
spec:
  tls:
    - hosts:
        - api-hlg-your-application-name-here.via.com.br
      secretName: via-tls
  rules:
    - host: api-hlg-your-application-name-here.via.com.br
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: your-application-name-here
                port:
                  number: 80
